@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9-Kosi005-HP_RC12SR1R-powered
-# Sat Mar 24 04:13:03 2012
+# Fri Mar 30 01:36:13 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1605,6 +1605,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_IIO is not set
 CONFIG_RAMZSWAP=m
 CONFIG_RAMZSWAP_STATS=y
+CONFIG_RAMZSWAP_OLD_COMPRESSION=y
 
 #
 # File systems
@@ -1901,8 +1902,8 @@ CONFIG_CRC32=y
 # CONFIG_LIBCRC32C is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
-#CONFIG_LZO_COMPRESS=m
-#CONFIG_LZO_DECOMPRESS=m
+CONFIG_LZO_COMPRESS=m
+CONFIG_LZO_DECOMPRESS=m
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
