@@ -23,8 +23,13 @@
 #include <linux/device.h>
 #include <linux/genhd.h>
 #include <linux/highmem.h>
-//#include <linux/lzo.h>
+
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+#include <linux/lzo.h>
+#else
 #include "csnappy.h"
+#endif 
+
 #include <linux/string.h>
 #include <linux/swap.h>
 #include <linux/swapops.h>
@@ -778,21 +783,27 @@ static int ramzswap_read(struct ramzswap *rzs, struct bio *bio)
 	cmem = kmap_atomic(rzs->table[index].page, KM_USER1) +
 			rzs->table[index].offset;
 
-/*	ret = lzo1x_decompress_safe(
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+	ret = lzo1x_decompress_safe(
 		cmem + sizeof(*zheader),
 		xv_get_object_size(cmem) - sizeof(*zheader),
 		user_mem, &clen);
-*/
+#else
 	ret = csnappy_decompress_noheader(
 		cmem + sizeof(*zheader),
 		xv_get_object_size(cmem) - sizeof(*zheader),
 		user_mem, &clen);
+#endif
 
 	kunmap_atomic(user_mem, KM_USER0);
 	kunmap_atomic(cmem, KM_USER1);
 
 	/* should NEVER happen */
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+	if (unlikely(ret != LZO_E_OK)) {
+#else
 	if (unlikely(ret != CSNAPPY_E_OK)) {
+#endif
 		pr_err("Decompression failed! err=%d, page=%u\n",
 			ret, index);
 		stat64_inc(rzs, &rzs->stats.failed_reads);
@@ -812,7 +823,7 @@ out:
 
 static int ramzswap_write(struct ramzswap *rzs, struct bio *bio)
 {
-	int ret, fwd_write_request = 0;
+	int fwd_write_request = 0;
 	u32 offset, index;
 	size_t clen;
 	struct zobj_header *zheader;
@@ -858,22 +869,25 @@ static int ramzswap_write(struct ramzswap *rzs, struct bio *bio)
 		goto out;
 	}
 
-/*	ret = lzo1x_1_compress(user_mem, PAGE_SIZE, src, &clen,
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+	int ret = lzo1x_1_compress(user_mem, PAGE_SIZE, src, &clen,
 				rzs->compress_workmem);
-*/
+#else
 	end = csnappy_compress_fragment(user_mem, PAGE_SIZE, src, 
 				rzs->compress_workmem, CSNAPPY_WORKMEM_BYTES_POWER_OF_TWO);
 	clen = end - src;
+#endif
 
 	kunmap_atomic(user_mem, KM_USER0);
 
-/*	if (unlikely(ret != LZO_E_OK)) {
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+	if (unlikely(ret != LZO_E_OK)) {
 		mutex_unlock(&rzs->lock);
 		pr_err("Compression failed! err=%d\n", ret);
 		stat64_inc(rzs, &rzs->stats.failed_writes);
 		goto out;
 	}
-*/
+#endif
 
 	/*
 	 * Page is incompressible. Forward it to backing swap
@@ -1144,9 +1158,11 @@ static int ramzswap_ioctl_init_device(struct ramzswap *rzs)
 	else
 		ramzswap_set_disksize(rzs, totalram_pages << PAGE_SHIFT);
 
-/*	rzs->compress_workmem = kzalloc(LZO1X_MEM_COMPRESS, GFP_KERNEL);
-*/
+#if defined(CONFIG_RAMZSWAP_OLD_COMPRESSION)
+	rzs->compress_workmem = kzalloc(LZO1X_MEM_COMPRESS, GFP_KERNEL);
+#else
 	rzs->compress_workmem = kzalloc(CSNAPPY_WORKMEM_BYTES, GFP_KERNEL);
+#endif
 
 	if (!rzs->compress_workmem) {
 		pr_err("Error allocating compressor working memory!\n");
